💚 Fix wrapping for long authors list

--- a/style.css
+++ b/style.css
@@ -521,11 +521,12 @@ main.post .content .meta {
 	color: var(--c-primary-low-accent2);
 	margin-bottom: 3rem;
 	display: flex;
-	gap: 1.5rem;
+	gap: .25rem 1.5rem;
 	flex-wrap: wrap;
 }
 main.post .content .meta > * {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	gap: 0.25rem;
 }
